2008-05-20  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for https://bugs.webkit.org/show_bug.cgi?id=17655
          <rdar://problem/5778077> REGRESSION (3.1.1-TOT): Reproducible crash calling querySelector on viewless Document

        * fast/dom/SelectorAPI/resources/viewless-document.js: Added.
        * fast/dom/SelectorAPI/viewless-document-expected.txt: Added.
        * fast/dom/SelectorAPI/viewless-document.html: Added.

2008-05-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adam Roben.

        - update test results following <http://trac.webkit.org/changeset/33395>

        * platform/mac/fast/frames/viewsource-attribute-expected.checksum:
        * platform/mac/fast/frames/viewsource-attribute-expected.png:
        * platform/mac/fast/frames/viewsource-attribute-expected.txt:

2008-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=18308
        SVG Encoding error with fill attribute

        * fast/loader/data-url-encoding-html-expected.txt: Added.
        * fast/loader/data-url-encoding-html.html: Added.
        * fast/loader/data-url-encoding-svg-expected.txt: Added.
        * fast/loader/data-url-encoding-svg.html: Added.
        * fast/loader/javascript-url-encoding-expected.txt: Added.
        * fast/loader/javascript-url-encoding.html: Added.

2008-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=18421
        <rdar://problem/5857369> XMLHttpRequest does not properly encode & and < in outgoing messages

        * http/tests/xmlhttprequest/serialize-document-expected.txt: Added.
        * http/tests/xmlhttprequest/serialize-document.html: Added.

2008-05-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - test for <rdar://problem/5943569> crash due to stale ownerNode pointer

        * fast/dom/StyleSheet: Added.