@@ -1,0 +1,5 @@
+Test how URLs are encoded.
+
+abs-path: PASS
+rel-path: PASS
+absolute: PASS
