@@ -1,3 +1,15 @@
+2008-05-21  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        https://bugs.webkit.org/show_bug.cgi?id=19169
+        <rdar://5952342> REGRESSION: nakarte.ru searches don't work
+
+        Test: http/tests/xmlhttprequest/encode-request-url.html
+
+        * platform/KURL.cpp: (WebCore::KURL::init): Don't allow UTF-8 encoded data to be implicitly
+        converted to String, as it will be encoded again by parse().
+
 2008-05-21  Ariya Hidayat  <ariya.hidayat@trolltech.com>
 
         Reviewed by Simon.
