@@ -1,3 +1,14 @@
+2008-05-21  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        https://bugs.webkit.org/show_bug.cgi?id=19169
+        <rdar://5952342> REGRESSION: nakarte.ru searches don't work
+
+        * http/tests/xmlhttprequest/encode-request-url-expected.txt: Added.
+        * http/tests/xmlhttprequest/encode-request-url.html: Added.
+        * http/tests/xmlhttprequest/resources/print-query.cgi: Added.
+
 2008-05-20  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
